# numgeom

./: .codeassistantignore  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  README.md  vcpkg.json
.codeassistant/: intro.md  mcp.json
.devcontainer/: devcontainer.json
cmake/: CopyDeps.cmake  DeployApp.cmake  FindGBM.cmake  FindXCB.cmake  GitVersionDetect.cmake  Qt5Utils.cmake  QtUtils.cmake  launcher-qtapp.sh.in  wix-patch.xml
demo/app-qt/: CMakeLists.txt  downloaddata.cc  downloaddata.h  loadtotrimesh.cc  main.cc  mainwindow.cc  mainwindow.h  scenemdisubwindow.cc  scenemdisubwindow.h  scenewindow.cc  scenewindow.h  version.h.in
demo/app-qt/appimage/: make-appimage.sh  qt.conf
demo/app-qt/cmake/: QtUtils.cmake  qt.conf.in
demo/app-qt/dialogs/: addforegroundimage.cc  addforegroundimage.h  addforegroundtext.cc  addforegroundtext.h
demo/app-qt/resources/: app.qrc  welcome-model.vtk
devops/: build-linux.sh  build-windows.bat  install-linuxdeploy.sh  (+3 more)
examples/app-qt/: CMakeLists.txt  color.frag  color.vert  gpumemory.cpp  gpumemory.h  loadtotrimesh.h  main.cc  main.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.h  scenewindow.cc  scenewindow.cpp  scenewindow.h  scenewindow2.cpp  scenewindow2.h  vulkanwidget.cpp  vulkanwidget.h  vulkanwindow.cpp  vulkanwindow.h  vulkanwindowrenderer.cpp  vulkanwindowrenderer.h
examples/app-qt/appimage/: app-qt.sh  app.desktop  make-appimage.sh
examples/app-qt/resources/: app.qrc
src/: CMakeLists.txt  classificate.cpp  curvemetriclength.cpp  ffextintersections.h  intersections.cpp  intersections.h  iterator_ijk.cpp  loadfromvtk.cpp  octree.cpp  quadtree.cpp  removefaces.cpp  staticjaggedarray.cpp  trimesh.cpp  trimeshconnectivity.cpp  utilities.cpp  vtk.y  writevtk.cpp  writevtk.h
src/app/: CMakeLists.txt  app.vert  binary2text.sh  common.h  cube.cpp  logo.h  main.cpp  main.cpp.orig  mainwindow.cpp  mainwindow.h  openglwidget.cpp  openglwidget.h  triangle.frag  triangle.vert  vkrender.cpp  vkrender.h
src/autogenerated/: vtk_parser.c  vtk_parser.h  vtk_scanner.c
src/core/: CMakeLists.txt  outcome.cc  outcome.cpp  shapes.cc  staticjaggedarray.cc  staticjaggedarray.cpp  trimesh.cc  trimesh.cpp  trimeshconnectivity.cc  trimeshconnectivity.cpp
src/core/include/numgeom/: alignedboundbox.h  circularlist.h  iterator.h  iteratorimpl.h  iteratorimpl.hpp  linmath.h  orthobasis.h  outcome.h  shapes.h  staticjaggedarray.h  trimesh.h  trimeshconnectivity.h
src/framework/: CMakeLists.txt  app.frag  app.vert  application.cc  application.cpp  applicationinner.cc  applicationinner.h  applicationstate.cc  applicationstate.h  axisindicator.cc  binary_to_hex_array.py  camera.cc  camera.cpp  camera.h  compositing.frag  debug_framework.cc  drawable.cc  drawable_cone.cc  drawable_cylinder.cc  drawable_sphere.cc  fgimage.cc  fgimage.h  fgimage.vert  fgobject.cc  fgtext.cc  foregroundimage.cc  foregroundimage.h  gpumanager.cc  gpumanager.cpp  gpumemory.cc  gpumemory.cpp  logo.cc  logo.frag  logo.h  lrudescriptorsetpool.cc  lrudescriptorsetpool.h  lrupool.cc  meshchunk.cc  meshchunk.cpp  meshchunk.h  (+33 more)
src/framework/include/numgeom/: application.h  axisindicator.h  debug_framework.h  drawable.h  drawable_cone.h  drawable_cylinder.h  drawable_sphere.h  fgobject.h  fgtext.h  framework_enums.h  gpumanager.h  gpumemory.h  lrupool.h  pixelbuffer.h  scene.h  sceneobject.h  sceneobject_mesh.h  scenewidget.h  scenewidget_axisindicator.h  screentext.h  trackedobject.h  userinputcontroller.h  vkscenerenderer.h
src/include/numgeom/: circularlist.h  classificate.h  enums.h  ijk.h  loadfromvtk.h  octree.h  quadtree.h  staticjaggedarray.h  tesselate.h  trimesh.h  trimeshconnectivity.h  utilities.h
src/io/: CMakeLists.txt  loadfromvtk.cc  loadfromvtk.cpp  loadtotrimesh.cc  loadtotrimesh.cpp  loadusingocc.cpp  vtk.l  vtk.y  writetovtk.cc  writetovtk.cpp
src/io/autogenerated/: vtk_parser.c  vtk_parser.h  vtk_scanner.c
src/io/include/numgeom/: loadfromvtk.h  loadtotrimesh.h  loadusingocc.h  writetovtk.h
src/numgeom/: CMakeLists.txt  classificate.cc  classificate.cpp  curvemetriclength.h  ffextintersections.cpp  ffextintersections.h  iterator_ijk.cc  iterator_ijk.h  quadtree.cc  shapes.cc  shapes.cpp  tesselate.cc  tesselate.cpp  trimesh.cpp  utilities.cc  utilities.cpp  utilities_occ.cpp  writevtk.cc  writevtk.cpp
src/numgeom/include/numgeom/: circularlist.h  ijk.h  iterator.h  octree.h  quadtree.h  removefaces.h  shapes.h  trimesh.h  utilities.h  utilities_occ.h
src/occ/: CMakeLists.txt  curvemetriclength.cc  curvemetriclength.h  drawable_occshape.cc  drawable_polytriangulation.cc  ffextintersections.cc  ffextintersections.h  intersections.cc  intersections.h  iterator_ijk.h  loadusingocc.cc  octree.cc  quadtree.cc  removefaces.cc  sceneobject_polytriangulation.cc  sceneobject_tdocstd_document.cc  utilities_occ.cc  writevtk.h
src/occ/include/numgeom/: classificate.h  drawable_occshape.h  drawable_polytriangulation.h  enums.h  loadusingocc.h  octree.h  quadtree.h  removefaces.h  sceneobject_polytriangulation.h  sceneobject_tdocstd_document.h  shapes.h  tesselate.h  utilities_occ.h
src/render/: CMakeLists.txt  binary_to_hex_array.py  connect-wayland.cc  connect-wayland.cpp  connect-xcb.cc  connect-xcb.cpp  cube.cc  cube.cpp  renderdatamanager.cc  renderdatamanager.cpp  renderdatamanager.h  scenemanager.cc  scenemanager.cpp  shaderprogram.cpp  vkrender.cc  vkrender.cpp
src/render/include/numgeom/: common.h  connect-wayland.h  connect-xcb.h  sceneentity.h  sceneitem.h  scenemanager.h  shaderprogram.h  vkrender.h
src/xdg-shell-client/: CMakeLists.txt
tests/unittests/: CMakeLists.txt  configure.h.in  main.cc  main.cpp  testcircularlist.cc  testcircularlist.cpp  testclassificate.cc  testclassificate.cpp  testdrawable.cc  testexample.cc  testexample.cpp  testiterator.cc  testloadfromfile.cpp  testlrupool.cc  testoctree.cc  testoctree.cpp  testquadtree.cc  testquadtree.cpp  testremovefaces.cc  testremovefaces.cpp  testrender.cpp  testscene.cc  testtrimesh.cc  testtrimesh.cpp  utilities.cc  utilities.cpp  utilities.h
(+41 files in other folders)
